[fix] minor fix
