# controller/auth.go
@@ -9,7 +9,7 @@ import (
 )
 
 type dataLogin struct {
-	Email    string `json:"email" binding:"required"`
+	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
 
