# docs/swagger.yaml
@@ -44,13 +44,13 @@ definitions:
     type: object
   controller.dataLogin:
     properties:
-      email:
-        type: string
       password:
         type: string
+      username:
+        type: string
     required:
-    - email
     - password
+    - username
     type: object
   controller.dataLoginResponse:
     properties:
